internal/shader/testdata/bad/bad_global.go
package main

var unexposedVariable int
